// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MacronutrientsCalculator > macros(FEMALE 70 INTENSE GAIN) 1`] = `
{
  "carbs": 294,
  "fats": 70,
  "proteins": 140,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 INTENSE LOST) 1`] = `
{
  "carbs": 224,
  "fats": 63,
  "proteins": 154,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 INTENSE MAINTAIN) 1`] = `
{
  "carbs": 245,
  "fats": 77,
  "proteins": 98,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 LIGHT GAIN) 1`] = `
{
  "carbs": 245,
  "fats": 56,
  "proteins": 98,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 LIGHT LOST) 1`] = `
{
  "carbs": 175,
  "fats": 56,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 LIGHT MAINTAIN) 1`] = `
{
  "carbs": 175,
  "fats": 70,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 MODERATE GAIN) 1`] = `
{
  "carbs": 273,
  "fats": 70,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 MODERATE LOST) 1`] = `
{
  "carbs": 196,
  "fats": 56,
  "proteins": 140,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 MODERATE MAINTAIN) 1`] = `
{
  "carbs": 210,
  "fats": 70,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 SEDENTARY GAIN) 1`] = `
{
  "carbs": 210,
  "fats": 56,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 SEDENTARY LOST) 1`] = `
{
  "carbs": 140,
  "fats": 56,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 SEDENTARY MAINTAIN) 1`] = `
{
  "carbs": 175,
  "fats": 70,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 VERY_INTENSE GAIN) 1`] = `
{
  "carbs": 315,
  "fats": 84,
  "proteins": 154,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 VERY_INTENSE LOST) 1`] = `
{
  "carbs": 245,
  "fats": 63,
  "proteins": 175,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 VERY_INTENSE MAINTAIN) 1`] = `
{
  "carbs": 280,
  "fats": 77,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 INTENSE GAIN) 1`] = `
{
  "carbs": 336,
  "fats": 80,
  "proteins": 160,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 INTENSE LOST) 1`] = `
{
  "carbs": 256,
  "fats": 72,
  "proteins": 176,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 INTENSE MAINTAIN) 1`] = `
{
  "carbs": 280,
  "fats": 88,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 LIGHT GAIN) 1`] = `
{
  "carbs": 280,
  "fats": 64,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 LIGHT LOST) 1`] = `
{
  "carbs": 200,
  "fats": 64,
  "proteins": 128,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 LIGHT MAINTAIN) 1`] = `
{
  "carbs": 200,
  "fats": 80,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 MODERATE GAIN) 1`] = `
{
  "carbs": 312,
  "fats": 80,
  "proteins": 128,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 MODERATE LOST) 1`] = `
{
  "carbs": 224,
  "fats": 64,
  "proteins": 160,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 MODERATE MAINTAIN) 1`] = `
{
  "carbs": 240,
  "fats": 80,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 SEDENTARY GAIN) 1`] = `
{
  "carbs": 240,
  "fats": 64,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 SEDENTARY LOST) 1`] = `
{
  "carbs": 160,
  "fats": 64,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 SEDENTARY MAINTAIN) 1`] = `
{
  "carbs": 200,
  "fats": 80,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 VERY_INTENSE GAIN) 1`] = `
{
  "carbs": 360,
  "fats": 96,
  "proteins": 176,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 VERY_INTENSE LOST) 1`] = `
{
  "carbs": 280,
  "fats": 72,
  "proteins": 200,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 VERY_INTENSE MAINTAIN) 1`] = `
{
  "carbs": 320,
  "fats": 88,
  "proteins": 128,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 INTENSE GAIN) 1`] = `
{
  "carbs": 378,
  "fats": 90,
  "proteins": 180,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 INTENSE LOST) 1`] = `
{
  "carbs": 288,
  "fats": 81,
  "proteins": 198.00000000000003,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 INTENSE MAINTAIN) 1`] = `
{
  "carbs": 315,
  "fats": 99.00000000000001,
  "proteins": 125.99999999999999,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 LIGHT GAIN) 1`] = `
{
  "carbs": 315,
  "fats": 72,
  "proteins": 125.99999999999999,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 LIGHT LOST) 1`] = `
{
  "carbs": 225,
  "fats": 72,
  "proteins": 144,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 LIGHT MAINTAIN) 1`] = `
{
  "carbs": 225,
  "fats": 90,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 MODERATE GAIN) 1`] = `
{
  "carbs": 351,
  "fats": 90,
  "proteins": 144,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 MODERATE LOST) 1`] = `
{
  "carbs": 251.99999999999997,
  "fats": 72,
  "proteins": 180,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 MODERATE MAINTAIN) 1`] = `
{
  "carbs": 270,
  "fats": 90,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 SEDENTARY GAIN) 1`] = `
{
  "carbs": 270,
  "fats": 72,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 SEDENTARY LOST) 1`] = `
{
  "carbs": 180,
  "fats": 72,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 SEDENTARY MAINTAIN) 1`] = `
{
  "carbs": 225,
  "fats": 90,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 VERY_INTENSE GAIN) 1`] = `
{
  "carbs": 405,
  "fats": 108,
  "proteins": 198.00000000000003,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 VERY_INTENSE LOST) 1`] = `
{
  "carbs": 315,
  "fats": 81,
  "proteins": 225,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 VERY_INTENSE MAINTAIN) 1`] = `
{
  "carbs": 360,
  "fats": 99.00000000000001,
  "proteins": 144,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 INTENSE GAIN) 1`] = `
{
  "carbs": 420,
  "fats": 100,
  "proteins": 200,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 INTENSE LOST) 1`] = `
{
  "carbs": 320,
  "fats": 90,
  "proteins": 220.00000000000003,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 INTENSE MAINTAIN) 1`] = `
{
  "carbs": 350,
  "fats": 110.00000000000001,
  "proteins": 140,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 LIGHT GAIN) 1`] = `
{
  "carbs": 350,
  "fats": 80,
  "proteins": 140,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 LIGHT LOST) 1`] = `
{
  "carbs": 250,
  "fats": 80,
  "proteins": 160,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 LIGHT MAINTAIN) 1`] = `
{
  "carbs": 250,
  "fats": 100,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 MODERATE GAIN) 1`] = `
{
  "carbs": 390,
  "fats": 100,
  "proteins": 160,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 MODERATE LOST) 1`] = `
{
  "carbs": 280,
  "fats": 80,
  "proteins": 200,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 MODERATE MAINTAIN) 1`] = `
{
  "carbs": 300,
  "fats": 100,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 SEDENTARY GAIN) 1`] = `
{
  "carbs": 300,
  "fats": 80,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 SEDENTARY LOST) 1`] = `
{
  "carbs": 200,
  "fats": 80,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 SEDENTARY MAINTAIN) 1`] = `
{
  "carbs": 250,
  "fats": 100,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 VERY_INTENSE GAIN) 1`] = `
{
  "carbs": 450,
  "fats": 120,
  "proteins": 220.00000000000003,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 VERY_INTENSE LOST) 1`] = `
{
  "carbs": 350,
  "fats": 90,
  "proteins": 250,
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 VERY_INTENSE MAINTAIN) 1`] = `
{
  "carbs": 400,
  "fats": 110.00000000000001,
  "proteins": 160,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 INTENSE GAIN) 1`] = `
{
  "carbs": 294,
  "fats": 56,
  "proteins": 140,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 INTENSE LOST) 1`] = `
{
  "carbs": 224,
  "fats": 49,
  "proteins": 154,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 INTENSE MAINTAIN) 1`] = `
{
  "carbs": 245,
  "fats": 70,
  "proteins": 98,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 LIGHT GAIN) 1`] = `
{
  "carbs": 245,
  "fats": 49,
  "proteins": 98,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 LIGHT LOST) 1`] = `
{
  "carbs": 175,
  "fats": 42,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 LIGHT MAINTAIN) 1`] = `
{
  "carbs": 175,
  "fats": 56,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 MODERATE GAIN) 1`] = `
{
  "carbs": 273,
  "fats": 56,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 MODERATE LOST) 1`] = `
{
  "carbs": 196,
  "fats": 42,
  "proteins": 140,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 MODERATE MAINTAIN) 1`] = `
{
  "carbs": 210,
  "fats": 56,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 SEDENTARY GAIN) 1`] = `
{
  "carbs": 210,
  "fats": 49,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 SEDENTARY LOST) 1`] = `
{
  "carbs": 140,
  "fats": 42,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 SEDENTARY MAINTAIN) 1`] = `
{
  "carbs": 175,
  "fats": 56,
  "proteins": 84,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 VERY_INTENSE GAIN) 1`] = `
{
  "carbs": 315,
  "fats": 70,
  "proteins": 154,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 VERY_INTENSE LOST) 1`] = `
{
  "carbs": 245,
  "fats": 49,
  "proteins": 175,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 VERY_INTENSE MAINTAIN) 1`] = `
{
  "carbs": 280,
  "fats": 70,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 INTENSE GAIN) 1`] = `
{
  "carbs": 336,
  "fats": 64,
  "proteins": 160,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 INTENSE LOST) 1`] = `
{
  "carbs": 256,
  "fats": 56,
  "proteins": 176,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 INTENSE MAINTAIN) 1`] = `
{
  "carbs": 280,
  "fats": 80,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 LIGHT GAIN) 1`] = `
{
  "carbs": 280,
  "fats": 56,
  "proteins": 112,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 LIGHT LOST) 1`] = `
{
  "carbs": 200,
  "fats": 48,
  "proteins": 128,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 LIGHT MAINTAIN) 1`] = `
{
  "carbs": 200,
  "fats": 64,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 MODERATE GAIN) 1`] = `
{
  "carbs": 312,
  "fats": 64,
  "proteins": 128,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 MODERATE LOST) 1`] = `
{
  "carbs": 224,
  "fats": 48,
  "proteins": 160,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 MODERATE MAINTAIN) 1`] = `
{
  "carbs": 240,
  "fats": 64,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 SEDENTARY GAIN) 1`] = `
{
  "carbs": 240,
  "fats": 56,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 SEDENTARY LOST) 1`] = `
{
  "carbs": 160,
  "fats": 48,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 SEDENTARY MAINTAIN) 1`] = `
{
  "carbs": 200,
  "fats": 64,
  "proteins": 96,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 VERY_INTENSE GAIN) 1`] = `
{
  "carbs": 360,
  "fats": 80,
  "proteins": 176,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 VERY_INTENSE LOST) 1`] = `
{
  "carbs": 280,
  "fats": 56,
  "proteins": 200,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 VERY_INTENSE MAINTAIN) 1`] = `
{
  "carbs": 320,
  "fats": 80,
  "proteins": 128,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 INTENSE GAIN) 1`] = `
{
  "carbs": 378,
  "fats": 72,
  "proteins": 180,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 INTENSE LOST) 1`] = `
{
  "carbs": 288,
  "fats": 62.99999999999999,
  "proteins": 198.00000000000003,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 INTENSE MAINTAIN) 1`] = `
{
  "carbs": 315,
  "fats": 90,
  "proteins": 125.99999999999999,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 LIGHT GAIN) 1`] = `
{
  "carbs": 315,
  "fats": 62.99999999999999,
  "proteins": 125.99999999999999,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 LIGHT LOST) 1`] = `
{
  "carbs": 225,
  "fats": 54,
  "proteins": 144,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 LIGHT MAINTAIN) 1`] = `
{
  "carbs": 225,
  "fats": 72,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 MODERATE GAIN) 1`] = `
{
  "carbs": 351,
  "fats": 72,
  "proteins": 144,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 MODERATE LOST) 1`] = `
{
  "carbs": 251.99999999999997,
  "fats": 54,
  "proteins": 180,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 MODERATE MAINTAIN) 1`] = `
{
  "carbs": 270,
  "fats": 72,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 SEDENTARY GAIN) 1`] = `
{
  "carbs": 270,
  "fats": 62.99999999999999,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 SEDENTARY LOST) 1`] = `
{
  "carbs": 180,
  "fats": 54,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 SEDENTARY MAINTAIN) 1`] = `
{
  "carbs": 225,
  "fats": 72,
  "proteins": 108,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 VERY_INTENSE GAIN) 1`] = `
{
  "carbs": 405,
  "fats": 90,
  "proteins": 198.00000000000003,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 VERY_INTENSE LOST) 1`] = `
{
  "carbs": 315,
  "fats": 62.99999999999999,
  "proteins": 225,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 VERY_INTENSE MAINTAIN) 1`] = `
{
  "carbs": 360,
  "fats": 90,
  "proteins": 144,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 INTENSE GAIN) 1`] = `
{
  "carbs": 420,
  "fats": 80,
  "proteins": 200,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 INTENSE LOST) 1`] = `
{
  "carbs": 320,
  "fats": 70,
  "proteins": 220.00000000000003,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 INTENSE MAINTAIN) 1`] = `
{
  "carbs": 350,
  "fats": 100,
  "proteins": 140,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 LIGHT GAIN) 1`] = `
{
  "carbs": 350,
  "fats": 70,
  "proteins": 140,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 LIGHT LOST) 1`] = `
{
  "carbs": 250,
  "fats": 60,
  "proteins": 160,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 LIGHT MAINTAIN) 1`] = `
{
  "carbs": 250,
  "fats": 80,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 MODERATE GAIN) 1`] = `
{
  "carbs": 390,
  "fats": 80,
  "proteins": 160,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 MODERATE LOST) 1`] = `
{
  "carbs": 280,
  "fats": 60,
  "proteins": 200,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 MODERATE MAINTAIN) 1`] = `
{
  "carbs": 300,
  "fats": 80,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 SEDENTARY GAIN) 1`] = `
{
  "carbs": 300,
  "fats": 70,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 SEDENTARY LOST) 1`] = `
{
  "carbs": 200,
  "fats": 60,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 SEDENTARY MAINTAIN) 1`] = `
{
  "carbs": 250,
  "fats": 80,
  "proteins": 120,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 VERY_INTENSE GAIN) 1`] = `
{
  "carbs": 450,
  "fats": 100,
  "proteins": 220.00000000000003,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 VERY_INTENSE LOST) 1`] = `
{
  "carbs": 350,
  "fats": 70,
  "proteins": 250,
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 VERY_INTENSE MAINTAIN) 1`] = `
{
  "carbs": 400,
  "fats": 100,
  "proteins": 160,
}
`;
